# openmp-experimentals

./: CMakeLists.txt  main.cpp
